@@ -5,10 +5,12 @@ __metaclass__ = type
 
 import sys
 import time
+from textwrap import dedent
 
 from fixtures import (
     EnvironmentVariable,
     MockPatch,
+    MockPatchObject,
     )
 from systemfixtures import (
     FakeProcesses,
@@ -16,16 +18,30 @@ from systemfixtures import (
     )
 from testtools import TestCase
 
-from lpbuildd.target.chroot import ChrootUpdater
+from lpbuildd.target.chroot import ChrootSetup
+from lpbuildd.tests.fakeslave import FakeMethod
 
 
-class TestChrootUpdater(TestCase):
+class MockInsertFile(FakeMethod):
+
+    def __init__(self, *args, **kwargs):
+        super(MockInsertFile, self).__init__(*args, **kwargs)
+        self.source_bytes = None
+
+    def __call__(self, source_path, *args, **kwargs):
+        with open(source_path, "rb") as source:
+            self.source_bytes = source.read()
+        return super(MockInsertFile, self).__call__(
+            source_path, *args, **kwargs)
+
+
+class TestChrootSetup(TestCase):
 
     def test_chroot(self):
         self.useFixture(EnvironmentVariable("HOME", "/expected/home"))
         processes_fixture = self.useFixture(FakeProcesses())
         processes_fixture.add(lambda _: {}, name="/usr/bin/sudo")
-        ChrootUpdater("1", "xenial", "amd64").chroot(
+        ChrootSetup("1", "xenial", "amd64").chroot(
             ["apt-get", "update"], env={"LANG": "C"})
 
         expected_args = [
@@ -37,13 +53,33 @@ class TestChrootUpdater(TestCase):
             expected_args,
             [proc._args["args"] for proc in processes_fixture.procs])
 
+    def test_insert_file(self):
+        self.useFixture(EnvironmentVariable("HOME", "/expected/home"))
+        processes_fixture = self.useFixture(FakeProcesses())
+        processes_fixture.add(lambda _: {}, name="/usr/bin/sudo")
+        source_path = "/path/to/source"
+        target_path = "/path/to/target"
+        ChrootSetup("1", "xenial", "amd64").insert_file(
+            source_path, target_path)
+
+        expected_target_path = (
+            "/expected/home/build-1/chroot-autobuild/path/to/target")
+        expected_args = [
+            ["/usr/bin/sudo", "install",
+             "-o", "root", "-g", "root", "-m", "644",
+             source_path, expected_target_path],
+            ]
+        self.assertEqual(
+            expected_args,
+            [proc._args["args"] for proc in processes_fixture.procs])
+
     def test_update_succeeds(self):
         self.useFixture(EnvironmentVariable("HOME", "/expected/home"))
         processes_fixture = self.useFixture(FakeProcesses())
         processes_fixture.add(lambda _: {}, name="/usr/bin/sudo")
         self.useFixture(FakeTime())
         start_time = time.time()
-        ChrootUpdater("1", "xenial", "amd64").update()
+        ChrootSetup("1", "xenial", "amd64").update()
 
         apt_get_args = [
             "/usr/bin/sudo", "/usr/sbin/chroot",
@@ -75,7 +111,7 @@ class TestChrootUpdater(TestCase):
         mock_print = self.useFixture(MockPatch("__builtin__.print")).mock
         self.useFixture(FakeTime())
         start_time = time.time()
-        ChrootUpdater("1", "xenial", "amd64").update()
+        ChrootSetup("1", "xenial", "amd64").update()
 
         apt_get_args = [
             "/usr/bin/sudo", "/usr/sbin/chroot",
@@ -100,3 +136,21 @@ class TestChrootUpdater(TestCase):
         mock_print.assert_called_once_with(
             "Waiting 15 seconds and trying again ...", file=sys.stderr)
         self.assertEqual(start_time + 15, time.time())
+
+    def test_override_sources_list(self):
+        self.useFixture(EnvironmentVariable("HOME", "/expected/home"))
+        setup = ChrootSetup("1")
+        mock_insert_file = self.useFixture(
+            MockPatchObject(setup, "insert_file", new=MockInsertFile())).mock
+        setup.override_sources_list([
+            "deb http://archive.ubuntu.com/ubuntu xenial main",
+            "deb http://ppa.launchpad.net/launchpad/ppa/ubuntu xenial main",
+            ])
+
+        self.assertEqual(dedent("""\
+            deb http://archive.ubuntu.com/ubuntu xenial main
+            deb http://ppa.launchpad.net/launchpad/ppa/ubuntu xenial main
+            """).encode("UTF-8"), mock_insert_file.source_bytes)
+        self.assertEqual(
+            ("/etc/apt/sources.list",),
+            mock_insert_file.extract_args()[0][1:])
